--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13</version>
       <scope>test</scope>
     </dependency>
     
@@ -47,12 +47,15 @@
     <version>5.3.2</version>
 </dependency>
 
+<dependency><groupId>tech.grasshopper</groupId><artifactId>extentreports-cucumber7-adapter</artifactId><version>1.7.0</version></dependency>
+
+<dependency><groupId>info.cukes</groupId><artifactId>cucumber-picocontainer</artifactId><version>1.2.6</version><type>pom</type><scope>test</scope></dependency>
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 <dependency>
-    <groupId>io.cucumber</groupId>
-    <artifactId>cucumber-java</artifactId>
-    <version>7.11.0</version>
-</dependency>
+	<groupId>io.cucumber</groupId>
+	<artifactId>cucumber-java</artifactId>
+	<version>7.2.2</version>
+	</dependency>
 
 
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -96,21 +99,14 @@
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>7.5</version>
+    <version>7.6.1</version>
     <scope>test</scope>
 </dependency>
 <dependency>
-			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-testng</artifactId>
-			<version>1.2.5</version>
-			<scope>compile</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+	<groupId>io.cucumber</groupId>
+	<artifactId>cucumber-testng</artifactId>
+	<version>7.4.0</version>
+	</dependency>
   <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-api</artifactId>
@@ -121,7 +117,36 @@
     <artifactId>log4j-core</artifactId>
     <version>2.13.0</version>
   </dependency>
-  
+  <dependency>
+	  <groupId>info.cukes</groupId>
+	  <artifactId>cucumber-jvm-deps</artifactId>
+	  <version>1.0.5</version>
+	  <scope>provided</scope>
+	  </dependency>
+	  <dependency><groupId>net.masterthought</groupId><artifactId>cucumber-reporting</artifactId><version>5.0.2</version></dependency>
+   <dependency><groupId>info.cukes</groupId><artifactId>gherkin</artifactId><version>2.12.2</version><scope>provided</scope></dependency>
+   <dependency>
+	  <groupId>io.cucumber</groupId>
+	  <artifactId>cucumber-junit</artifactId>
+	  <version>7.2.2</version>
+	  </dependency>
+	  <dependency>
+	<groupId>org.junit.jupiter</groupId>
+	<artifactId>junit-jupiter-params</artifactId>
+	<version>5.2.0</version>
+	<scope>test</scope>
+</dependency>
+<dependency>
+					<groupId>org.apache.maven.surefire</groupId>
+					<artifactId>surefire-junit4</artifactId>
+					<version>2.22.0</version>
+				</dependency>
+				<dependency>
+  <groupId>org.junit.vintage</groupId>
+  <artifactId>junit-vintage-engine</artifactId>
+  <version>5.6.2</version>
+  <scope>test</scope>
+</dependency>
   </dependencies>
 
   <build>
